# dataconnect-library-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README_orig.md  docker-compose.yml  factbook.yaml  pyproject.toml  pyproject_orig.toml
.12factor/: Dockerfile
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
dataconnect/: __init__.py  _encoding.py  auth.py  client.py  exceptions.py  models.py  test.ipynb
dataconnect/framework/: pyarrow_transport.py  transport.py
dataconnect/readme/: README-v1.0.0.md
dataconnect/service/: __init__.py  base.py  default.py  error_handler.py  mappers.py  validators.py
dataconnect/transport/: __init__.py  base.py  errors.py  models.py
dataconnect/transport/arrow_flight/: __init__.py  error_handler.py  transport.py
guides/: dataconnect_quickstart.md  dataconnect_setup.md  dataconnect_usage.ipynb  transform_example.md
python_template/: reverse.py
readme/: README-v1.0.0.md  README-v1.1.0.md
scripts/: benchmark.sh  install.sh  lint.sh  test.sh  typecheck.sh
tests/: conftest.py  test_benchmark_reverser.py  test_client.py  test_dry_publish.py  test_fetch_data.py  test_get_datasets_paginated.py  test_get_datetime_formats.py  test_logging_headers.py  test_publish.py  test_python_template.py  test_reversers.py  test_service.py  test_service_default.py
tests/mocks/: words.yml
vignettes/: pythonLibrary_setup.md  pythonLibrary_usage.md
