[tool.poetry]
name = "dataconnect-library-python"
version = "0.1.0"
description = "Python library built by Medidata for connecting to Data Connect and programmatically querying and retrieving data."
authors = ["Team 348 (SDK) <List_custom_t348_cds_sdk@3ds.com>"]

[[tool.poetry.source]]
# Needs AUTH in ENV (using UPPERCASE name):
#  https://python-poetry.org/docs/repositories/#configuring-credentials
#
# export POETRY_HTTP_BASIC_MDSOL_PASSWORD=$ARTIFACTORY_PASSWORD
# export POETRY_HTTP_BASIC_MDSOL_USERNAME=$ARTIFACTORY_USERNAME
name = "mdsol"
url = "https://mdsol.jfrog.io/artifactory/api/pypi/pypi-prod-virtual/simple"
secondary = false

#
# Dependancies
#
[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
astinus = "^0.7.0"

# SERVICE
[tool.poetry.group.service]
optional = true

[tool.poetry.group.service.dependencies]
gunicorn ="^20.1.0"

# ML
[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
pandas = "^2.0.2"

# DEV
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.3"
pdbpp = "^0.10.3"
pre-commit = "^3.3.2"
# below revs must exactly match .pre-commit-config.yaml
black = "23.3.0"
autoflake = "2.1.1"
isort = "5.12.0"

# TEST
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = "benchmark: mark tests that run performance benchmarks"
