[tool.poetry]
name = "dataconnect-library-python"
version = "0.1.0"
description = "Python library built by Medidata for connecting to Data Connect and programmatically querying and retrieving data."
authors = ["Team 348 (SDK) <List_custom_t348_cds_sdk@3ds.com>"]
packages = [{include = "dataconnect"}]

[[tool.poetry.source]]
# Needs AUTH in ENV (using UPPERCASE name):
#  https://python-poetry.org/docs/repositories/#configuring-credentials
# export POETRY_HTTP_BASIC_MDSOL_PASSWORD=$ARTIFACTORY_PASSWORD
# export POETRY_HTTP_BASIC_MDSOL_USERNAME=$ARTIFACTORY_USERNAME
name = "mdsol"
url = "https://mdsol.jfrog.io/artifactory/api/pypi/pypi-prod-virtual/simple"

#
# Dependancies
#
[tool.poetry.dependencies]
python = "^3.13"
pyarrow = "^19.0.0"
pandas = "^2.0.2"

# SERVICE
[tool.poetry.group.service]
optional = true

[tool.poetry.group.service.dependencies]
gunicorn ="^20.1.0"

# ML
[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]

# DEV
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.2"
pre-commit = "^3.3.2"
pytest = ">=7.3.2,<10.0.0"
pytest-cov = ">=4.1,<8.0"
ruff = "0.15.12"

# TEST
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.2,<10.0.0"
pytest-xdist = "^3.3.1"
pytest-cov = ">=4.1,<8.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = "benchmark: mark tests that run performance benchmarks"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".venv",
    ".git",
    ".github",
    "__pycache__",
    "site-packages",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    "doc/",
    ".deploy",
    "*.md",
    "*.sql",
    "*.yaml"
]

[tool.ruff.lint]
select = ["B", "E", "W", "F", "I", "UP", "ANN"]
ignore = ["ANN401"]  # allow Any in public API

# -----------------------------------------------------------------------
# mypy
# -----------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
